quic/s2n-quic-transport/src/path/ecn/snapshots/quic__s2n-quic-transport__src__path__ecn__tests__events__restart.snap
---
source: quic/s2n-quic-transport/src/path/ecn/tests.rs
expression: ""

---
EcnStateChanged { path: Path { local_addr: 127.0.0.1:0, local_cid: 0x4c6f63616c4900000000000000004c6f63616c49, remote_addr: 127.0.0.1:0, remote_cid: 0x5065657249640000000000000000506565724964, id: 0 }, state: Testing }
